[package]
name = "drive_syncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-drive3 = "5.0"
tokio = { version = "1.28", features = ["full", "tracing"] }
env_logger = "0.10"
#nix = { version = "0.26", features = ["mount"] }
tempfile = "3.5.0"
notify = { version = "5.1",  default-features = false, features = ["macos_kqueue"]}

fuser = "0.12"
async-trait = "0.1.68"
libc = "0.2"
reqwest = "0.11.17"
bytes = "1.4.0"
futures = "0.3.28"
hyper = { version = "0.14.24", features = ["full", "stream"] }
mime = "0.3"
anyhow = "1.0"
async-recursion = "1.0.4"
ignore = "0.4.20"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
console-subscriber = "0.1.9"
bimap = "0.6.3"
md-5 = "0.10"
