[package]
name = "drive_syncer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-drive3 = "5.0"
tokio = { version = "1.28", features = ["full", "tracing"] }
tempfile = "3.5.0"

fuser = "0.12"
libc = "0.2"
reqwest = "0.11.17"
bytes = "1.4.0"
futures = "0.3.28"
hyper = { version = "0.14.24", features = ["full", "stream"] }
mime = "0.3"
anyhow = "1.0"
ignore = "0.4.20"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
console-subscriber = "0.1.9"
bimap = "0.6.3"
md-5 = "0.10"
